changed sec background color

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="sec-one-text-box col-6">
               <p class="short-intro">I've always been interested in human-computer interaction, so in university, I joined the Living Lab, in which I made my first processing interaction program with my fellow lab mate. After graduation, I decided to learn web development full time at Taishan Vocational Training Center. 
               </p>
-              <p>Here, I learn how not only learned how to develop website, but also how to think like a programmer. I look forward to putting the knowledge I learned from here in my future job!</p>
+              <p class="short-intro">Here, I learn how not only learned how to develop website, but also how to think like a programmer. I look forward to putting the knowledge I learned from here in my future job!</p>
             </div>
           </div>
         </div>
@@ -108,8 +108,8 @@
 
     <!-- skill cards -->
     <div class="mid-sec-two-row row">
-
-      <div class="card card01 col-xl-6 col-lg-6 col-col-sm-12 shadow">
+      
+      <div class="card card01">
         <div class="card-header card01-header">
           <img src="image/front-hand.png" alt="front of hand" class="card-icon" id="front">
           <h3 class="card-cap">Front-End</h3>
