--- a/index copy.html
+++ b/index copy.html
@@ -6,10 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume</title>
   <!-- bootstrap -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="bootstrap.min.css">
-  <script src="bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<link rel="stylesheet" href="bootstrap.css">
+<script src="bootstrap.bundle.min.js"></script>
   <!-- for web font -->
   <link rel="stylesheet" href="https://use.typekit.net/swe4czq.css">
   <!-- aos js stylesheet-->
@@ -39,15 +38,14 @@
 <body>
 
   <!-- header最外層 -->
-  <header class="container title">
+  <header class="container-fluid title">
     <!-- navigation bar -->
     <nav class="navbar navbar-expand-lg">
       <a class="navbar-brand" href="#">Sadie Hsieh</a>
-
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navv">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navv">
         <span class="navbar-toggler-icon"></span>
       </button>
-
+    
       <div class="collapse navbar-collapse text-center" id="navv">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
@@ -68,7 +66,7 @@
         </ul>
       </div>
     </nav>
-
+   
     <!-- naviagtion bar ends here -->
     <!-- header remaining space -->
     <div class="header-box">
@@ -86,8 +84,8 @@
 
   </header>
 
-  <section class="mid-sec-one ">
-    <div class="container">
+  <section>
+    <div class="mid-sec-one container-fluid">
       <div class="sec-one-row">
         <div class="left">
           <!-- the caption of about me -->
@@ -113,81 +111,83 @@
       </div>
     </div>
   </section>
+  <section class="mid-sec-two container-fluid">
+    <!-- skills caption section -->
 
-  <section class="mid-sec-two">
-    <div class="container">
-      <!-- skills caption section -->
-      <h2 class="short-cap" id="skills">Skills</h2>
-      <div class="line"></div>
+    <h2 class="short-cap" id="skills">Skills</h2>
+    <div class="line"></div>
 
-      <!-- skill cards -->
-      <!-- <div class="mid-sec-two-row row"> -->
-      <div class="row mt-5">
-        <div class="card-wrapper col-xxl-3 col-xl-6 col-md-6">
-          <div class="card card01">
-            <div class="card-header card01-header">
-              <img src="image/front-hand.png" alt="front of hand" class="card-icon" id="front">
-              <h3 class="card-cap">Front-End</h3>
-            </div>
-            <ul class="list-group list-group-flush card01-kids ">
-              <li class="list-group-item card01-kids">HTML/CSS</li>
-              <li class="list-group-item card01-kids">Bootstrap</li>
-              <li class="list-group-item card01-kids">Javascript</li>
-              <li class="list-group-item card01-kids">JQuery</li>
-            </ul>
+    <!-- skill cards -->
+    <div class="mid-sec-two-row row d-flex justify-content-center align-items-center">
+<div class="card-wrapper col-xl-3 col-lg-6 col-md-6">
+        <div class="card card01">
+          <div class="card-header card01-header">
+            <img src="image/front-hand.png" alt="front of hand" class="card-icon" id="front">
+            <h3 class="card-cap">Front-End</h3>
           </div>
+          <ul class="list-group list-group-flush card01-kids ">
+            <li class="list-group-item card01-kids">HTML/CSS</li>
+            <li class="list-group-item card01-kids">Bootstrap</li>
+            <li class="list-group-item card01-kids">Javascript</li>
+            <li class="list-group-item card01-kids">JQuery</li>
+          </ul>
         </div>
-        <div class="card-wrapper col-xxl-3 col-xl-6 col-md-6">
-          <div class="card card02">
-            <div class="card-header card02-header">
-              <img src="image/back-hand.png" alt="back of hand" class="card-icon" id="back ">
-              <h3 class="card-cap">Back-End</h3>
-            </div>
-            <ul class="list-group list-group-flush card02-kids">
-              <li class="list-group-item card02-kids">PHP</li>
-              <li class="list-group-item card02-kids">MySQL</li>
-              <li class="list-group-item card02-kids"></li>
-            </ul>
+</div>
+
+
+
+
+      <div class="card-wrapper col-xl-3 col-lg-6 col-md-6">
+        <div class="card card02">
+          <div class="card-header card02-header">
+            <img src="image/back-hand.png" alt="back of hand" class="card-icon" id="back ">
+            <h3 class="card-cap">Back-End</h3>
           </div>
+          <ul class="list-group list-group-flush card02-kids">
+            <li class="list-group-item card02-kids">PHP</li>
+            <li class="list-group-item card02-kids">MySQL</li>
+            <li class="list-group-item card02-kids"></li>
+          </ul>
         </div>
+      </div>
 
-        <div class="card-wrapper col-xxl-3 col-xl-6 col-md-6">
-          <div class="card card03">
-            <div class="card-header card03-header">
-              <img src="image/lipsx0.5.png" alt="lips" class="card-icon" id="lips">
-              <h3 class="card-cap">Language </h3>
-            </div>
-            <ul class="list-group list-group-flush card03-kids text-center">
-              <li class="list-group-item card03-kids">TOEIC (970)</li>
-              <li class="list-group-item card03-kids">IELTS (8.0)</li>
-            </ul>
+      <div class="card-wrapper col-xl-3 col-lg-6 col-md-6">
+        <div class="card card03">
+          <div class="card-header card03-header">
+            <img src="image/lipsx0.5.png" alt="lips" class="card-icon" id="lips">
+            <h3 class="card-cap">Language </h3>
           </div>
+          <ul class="list-group list-group-flush card03-kids text-center">
+            <li class="list-group-item card03-kids">TOEIC (970)</li>
+            <li class="list-group-item card03-kids">IELTS (8.0)</li>
+          </ul>
         </div>
+      </div>
 
 
-        <div class="card-wrapper  col-xxl-3 col-xl-6 col-md-6">
-          <div class="card card04">
-            <div class="card-header card04-header">
-              <img src="image/tool.png" alt="lips" class="card-icon" id="tool">
-              <h3 class="card-cap" id="card-cap-others">Others</h3>
-            </div>
-            <ul class="list-group list-group-flush card04-kids text-center">
-              <li class="list-group-item card04-kids">Photoshop</li>
-              <li class="list-group-item card04-kids">Illustrator</li>
-              <li class="list-group-item card04-kids">Premiere</li>
-              <li class="list-group-item card04-kids">Microsoft Office</li>
-            </ul>
+      <div class="card-wrapper  col-xl-3 col-lg-6 col-md-6">
+        <div class="card card04">
+          <div class="card-header card04-header">
+            <img src="image/tool.png" alt="lips" class="card-icon" id="tool">
+            <h3 class="card-cap" id="card-cap-others">Others</h3>
           </div>
+          <ul class="list-group list-group-flush card04-kids text-center">
+            <li class="list-group-item card04-kids">Photoshop</li>
+            <li class="list-group-item card04-kids">Illustrator</li>
+            <li class="list-group-item card04-kids">Premiere</li>
+            <li class="list-group-item card04-kids">Microsoft Office</li>
+          </ul>
         </div>
       </div>
     </div>
+
   </section>
   <section class="mid-sec-three" id="exp">
-    <div class="container">
+    <div class="mid-sec-three-row">
       <h2 class="short-cap" id="exps">Experience</h2>
       <div class="line-three"></div>
       <div class="timeline-wrapper">
-        <div class="timeline w-100 position-relative">
+        <div class="timeline">
           <ul>
             <li>
               <div class="timeline-content" data-aos="zoom-in">
@@ -287,16 +287,23 @@
         <div class="line-five line"></div>
         <div class="row row-one mb-3 mt-3">
           <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 pro-block" id="row-1-a">
-            <div class="square s1 ratio ratio-16x9">
+            <div class="square s1">
               <div class="text-box">
-                <h4 class="port-heading">萬年曆</h4>
+                <h4 class="port-heading">perpectual calendar</h4>
                 <div class="hash-box d-flex justify-content-space-between">
                   <span class="hashtag htag ">HTML</span>
                   <span class="hashtag htag">CSS</span>
                   <span class="hashtag htag">PHP</span>
                 </div>
+                <ul class="port-ul">
+                  <li>can switch between months and show the current date</li>
+                  <li>simple to-do list as a small reminder</li>
+                  <li>used the imagery of a crowded subway station and concrete building to create a metropolitan
+                    aesthetic
+                  </li>
+                </ul>
                 <div class="go-icon ">
-                  <a href="http://220.128.133.15/s1090403/pc/" target="_blank"
+                  <a href="http://220.128.133.15/s1090403/pc/cest_calendar_v4.php" target="_blank"
                     rel="noopener noreferrer" class="go-link">
                     <i class="fas fa-arrow-right fa-2x go-arrow"></i>
                   </a>
@@ -306,16 +313,18 @@
             </div>
           </div>
           <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 pro-block" id="row-1-b">
-            <div class="square s2 ratio ratio-16x9">
+            <div class="square">
               <div class="text-box">
-                <h4 class="port-heading">簡易番茄鐘</h4>
-                <div class="hash-box d-flex justify-content-space-between">
-                  <span class="hashtag htag">JavaScript</span>
-                  <span class="hashtag htag ">HTML</span>
-                  <span class="hashtag htag">CSS</span>
-                </div>
+                <h4 class="port-heading">coming soon</h4>
+                <!--  <span class="hashtag htag">HTML</span>
+                <ul class="port-ul">
+                  <li>可以切換每個月分，並顯示當下日期</li>
+                  <li>有小to-do list功能，可以作為簡單提醒事項</li>
+                  <li>利用地鐵影像影像與建築創造出都市美學氛圍
+                  </li>
+                </ul> -->
                 <div class="go-icon ">
-                  <a href="https://hernameisgreen.github.io/simple_pomodoro" target="_blank" rel="noopener noreferrer" class="go-link">
+                  <a href="#" target="_blank" rel="noopener noreferrer" class="go-link">
                     <i class="fas fa-arrow-right fa-2x go-arrow"></i>
                   </a>
                 </div>
@@ -323,16 +332,18 @@
             </div>
           </div>
           <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 pro-block" id="row-1-c">
-            <div class="square ratio ratio-16x9 s3">
+            <div class="square">
               <div class="text-box">
-                <h4 class="port-heading">對發票+記帳系統</h4>
-                <div class="hash-box d-flex justify-content-space-between">
-                  <span class="hashtag htag ">HTML</span>
-                  <span class="hashtag htag">CSS</span>
-                  <span class="hashtag htag">PHP</span>
-                </div>
+                <h4 class="port-heading">coming soon</h4>
+                <!-- <span class="hashtag htag">HTML</span>
+                <ul class="port-ul">
+                  <li>可以切換每個月分，並顯示當下日期</li>
+                  <li>有小to-do list功能，可以作為簡單提醒事項</li>
+                  <li>利用地鐵影像影像與建築創造出都市美學氛圍
+                  </li>
+                </ul> -->
                 <div class="go-icon ">
-                  <a href="http://220.128.133.15/s1090403/resume_backend%20/resume.php" target="_blank" rel="noopener noreferrer" class="go-link">
+                  <a href="#" target="_blank" rel="noopener noreferrer" class="go-link">
                     <i class="fas fa-arrow-right fa-2x go-arrow"></i>
                   </a>
                 </div>
@@ -341,16 +352,18 @@
           </div>
 
           <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 pro-block" id="row-2-a">
-            <div class="square ratio ratio-16x9 s4">
+            <div class="square">
               <div class="text-box">
-                <h4 class="port-heading">紐約時報暢銷書排行</h4>
-                <div class="hash-box d-flex justify-content-space-between">
-                  <span class="hashtag htag ">HTML</span>
-                  <span class="hashtag htag">CSS</span>
-                  <span class="hashtag htag">JQuery</span>
-                </div>
+                <h4 class="port-heading">coming soon</h4>
+                <!-- <span class="hashtag htag">HTML</span>
+                <ul class="port-ul">
+                  <li>可以切換每個月分，並顯示當下日期</li>
+                  <li>有小to-do list功能，可以作為簡單提醒事項</li>
+                  <li>利用地鐵影像影像與建築創造出都市美學氛圍
+                  </li>
+                </ul> -->
                 <div class="go-icon ">
-                  <a href="http://220.128.133.15/s1090403/api%20table/" target="_blank" rel="noopener noreferrer" class="go-link">
+                  <a href="#" target="_blank" rel="noopener noreferrer" class="go-link">
                     <i class="fas fa-arrow-right fa-2x go-arrow"></i>
                   </a>
                 </div>
@@ -358,16 +371,18 @@
             </div>
           </div>
           <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 pro-block" id="row-2-b">
-            <div class="square ratio ratio-16x9 s5">
+            <div class="square">
               <div class="text-box">
-                <h4 class="port-heading">JS時鐘</h4>
-                <div class="hash-box d-flex justify-content-space-between">
-                  <span class="hashtag htag ">HTML</span>
-                  <span class="hashtag htag">CSS</span>
-                  <span class="hashtag htag">JavaScript</span>
-                </div>
+                <h4 class="port-heading">coming soon</h4>
+                <!--    <span class="hashtag htag">HTML</span>
+                <ul class="port-ul">
+                  <li>可以切換每個月分，並顯示當下日期</li>
+                  <li>有小to-do list功能，可以作為簡單提醒事項</li>
+                  <li>利用地鐵影像影像與建築創造出都市美學氛圍
+                  </li>
+                </ul> -->
                 <div class="go-icon ">
-                  <a href="https://hernameisgreen.github.io/js_analog_clock/" target="_blank" rel="noopener noreferrer" class="go-link">
+                  <a href="#" target="_blank" rel="noopener noreferrer" class="go-link">
                     <i class="fas fa-arrow-right fa-2x go-arrow"></i>
                   </a>
                 </div>
@@ -375,23 +390,82 @@
             </div>
           </div>
           <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 pro-block" id="row-2-c">
-            <div class="square ratio ratio-16x9 s6">
+            <div class="square">
               <div class="text-box">
-                <h4 class="port-heading">冰淇淋js小遊戲</h4>
-                <div class="hash-box d-flex justify-content-space-between">
-                  <span class="hashtag htag ">HTML</span>
-                  <span class="hashtag htag">CSS</span>
-                  <span class="hashtag htag">JavaScript</span>
-                </div>
+                <h4 class="port-heading">coming soon</h4>
+                <!-- <span class="hashtag htag">HTML</span>
+                <ul class="port-ul">
+                  <li>可以切換每個月分，並顯示當下日期</li>
+                  <li>有小to-do list功能，可以作為簡單提醒事項</li>
+                  <li>利用地鐵影像影像與建築創造出都市美學氛圍
+                  </li>
+                </ul> -->
                 <div class="go-icon ">
-                  <a href="https://hernameisgreen.github.io/icecream_game_js/" target="_blank" rel="noopener noreferrer" class="go-link">
+                  <a href="#" target="_blank" rel="noopener noreferrer" class="go-link">
                     <i class="fas fa-arrow-right fa-2x go-arrow"></i>
                   </a>
                 </div>
               </div>
             </div>
           </div>
-          <!-- insert here -->
+
+          <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 pro-block" id="row-3-a">
+            <div class="square">
+              <div class="text-box">
+                <h4 class="port-heading">coming soon</h4>
+                <!-- <span class="hashtag htag">HTML</span>
+                <ul class="port-ul">
+                  <li>可以切換每個月分，並顯示當下日期</li>
+                  <li>有小to-do list功能，可以作為簡單提醒事項</li>
+                  <li>利用地鐵影像影像與建築創造出都市美學氛圍
+                  </li>
+                </ul> -->
+                <div class="go-icon ">
+                  <a href="#" target="_blank" rel="noopener noreferrer" class="go-link">
+                    <i class="fas fa-arrow-right fa-2x go-arrow"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 pro-block" id="row-3-b">
+            <div class="square">
+              <div class="text-box">
+                <h4 class="port-heading">coming soon</h4>
+                <!--  <span class="hashtag htag">HTML</span>
+                <ul class="port-ul">
+                  <li>可以切換每個月分，並顯示當下日期</li>
+                  <li>有小to-do list功能，可以作為簡單提醒事項</li>
+                  <li>利用地鐵影像影像與建築創造出都市美學氛圍
+                  </li>
+                </ul> -->
+                <div class="go-icon ">
+                  <a href="#" target="_blank" rel="noopener noreferrer" class="go-link">
+                    <i class="fas fa-arrow-right fa-2x go-arrow"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 pro-block" id="row-3-c">
+            <div class="square">
+              <div class="text-box">
+                <h4 class="port-heading">coming soon</h4>
+                <!--  <span class="hashtag htag">HTML</span>
+                <ul class="port-ul">
+                  <li>可以切換每個月分，並顯示當下日期</li>
+                  <li>有小to-do list功能，可以作為簡單提醒事項</li>
+                  <li>利用地鐵影像影像與建築創造出都市美學氛圍
+                  </li>
+                </ul> -->
+                <div class="go-icon ">
+                  <a href="#" target="_blank" rel="noopener noreferrer" class="go-link">
+                    <i class="fas fa-arrow-right fa-2x go-arrow"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -401,13 +475,13 @@
   <footer>
     <div class="icon-box">
       <div class="icon-wrapper">
-        <a href="mailto:thisissadiehsieh@gmail.com"><i class="far fa-envelope fa-2x"></i></a>
+        <i class="far fa-envelope fa-2x"></i>
       </div>
       <div class="icon-wrapper">
-        <a href="https://github.com/hernameisgreen"><i class="fab fa-github fa-2x"></i></a>
+        <i class="fab fa-github fa-2x"></i>
       </div>
       <div class="icon-wrapper">
-        <a href="https://www.linkedin.com/in/yi-shan-hsieh-5ab2891a2/"><i class="fab fa-linkedin fa-2x"></i></a>
+        <i class="fab fa-linkedin fa-2x"></i>
       </div>
     </div>
   </footer>
