edited project link

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                   <span class="hashtag htag">PHP</span>
                 </div>
                 <div class="go-icon ">
-                  <a href="http://220.128.133.15/s1090403/resume_backend%20/resume.php" target="_blank" rel="noopener noreferrer" class="go-link">
+                  <a href="http://220.128.133.15/s1090403/invoice/" target="_blank" rel="noopener noreferrer" class="go-link">
                     <i class="fas fa-arrow-right fa-2x go-arrow"></i>
                   </a>
                 </div>
