--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@
             <ul class="list-group list-group-flush card01-kids ">
               <li class="list-group-item card01-kids">HTML/CSS</li>
               <li class="list-group-item card01-kids">Bootstrap</li>
+              <li class="list-group-item card01-kids">Tailwind CSS</li>
               <li class="list-group-item card01-kids">Javascript</li>
-              <li class="list-group-item card01-kids">JQuery</li>
+              <li class="list-group-item card01-kids">JQuery/Alpine JS</li>
             </ul>
           </div>
         </div>
